# esp32_xmas_counter

./: CMakeLists.txt
UI_Project/: UI_Project.sll  UI_Project.slp  UI_Project.spj  project.info
components/UI/: CMakeLists.txt
components/UI/UI/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
components/UI/UI/components/: ui_comp_hook.c
components/UI/UI/images/: ui_img_clock_imge_png.c  ui_img_xmas_image_png.c
components/UI/UI/screens/: ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h
components/WIFI_Manager/: CMakeLists.txt  WIFI_Manager.c
components/WIFI_Manager/include/: WIFI_Manager.h
main/: CMakeLists.txt  idf_component.yml  main.c
